Add button new post

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,7 +16,9 @@
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
           <div class="navbar-end">
+            <span class="navbar-item">
             <%= link_to "New post", :new_blog_post, class: "button is-success" %>
+            </span>
           </div>
         </div>
       </div>
